# UnivPM-KIT

./: README.md
decoder/: CMakeLists.txt  Phenonmenlogical_model_Hamming_code_example.ipynb  README.md  fileReader.cpp  fileReader.h  get_H_G_for_matlab_from_csv.py  helpers.cpp  helpers.h  main.cpp  prepare_extended_H_for_PL_decoding.py  simulateFER.cpp  stabilizerCodes.cpp  stabilizerCodes.h
decoder/PCMs/100_12/: 100_12_98_H.txt  100_12_G.txt
decoder/PCMs/100_24/: 100_24_84_H.txt  100_24_G.txt
decoder/PCMs/1025_583/: 1025_583_960_H.txt  1025_583_G.txt  1025_583_Gx.txt  1025_583_Gz.txt
decoder/PCMs/1026_848/: 1026_848_192_H.txt  1026_848_G.txt  1026_848_Gx.txt  1026_848_Gz.txt
decoder/PCMs/1057_571/: 1057_571_486_H.txt  1057_571_G.txt  decoding results
decoder/PCMs/106_8/: 106_8_98_H.txt  106_8_G.txt
decoder/PCMs/122_19/: 122_19_110_H.txt  122_19_G.txt
decoder/PCMs/122_20/: 122_20_110_H.txt  122_20_G.txt
decoder/PCMs/128_36/: 128_36_128_H.txt  128_36_G.txt  128_36_Gx.txt  128_36_Gz.txt
decoder/PCMs/1370_792/: 1370_792_592_H.txt  1370_792_Gx.txt  1370_792_Gz.txt
decoder/PCMs/170_24/: 170_24_156_H.txt  170_24_G.txt
decoder/PCMs/172_10/: 172_10_162_H.txt  172_10_G.txt
decoder/PCMs/21_3/: 21_3_18_H.txt  21_3_32_H.txt  21_3_G.txt  decoding_results
decoder/PCMs/226_154/: 226_154_75_H.txt  226_154_G.txt
decoder/PCMs/22_2/: 22_2_20_H.txt  22_2_G.txt
decoder/PCMs/244_20/: 244_20_242_H.txt  244_20_G.txt
decoder/PCMs/244_40/: 244_40_220_H.txt  244_40_G.txt
decoder/PCMs/24_2/: 24_2_24_H.txt  24_2_G.txt
decoder/PCMs/257_121/: 257_121_224_H.txt  257_121_G.txt  257_121_Gx.txt  257_121_Gz.txt
decoder/PCMs/257_173/: 257_173_96_H.txt  257_173_G.txt  257_173_Gx.txt  257_173_Gz.txt
decoder/PCMs/258_174/: 258_174_96_H.txt  258_174_G.txt  258_174_Gx.txt  258_174_Gz.txt  results.txt
decoder/PCMs/258_196/: 258_196_64_H.txt  258_196_G.txt  258_196_Gx.txt
decoder/PCMs/258_196_back_up/: 258_196_Gz.txt
decoder/PCMs/26_4/: 26_4_24_H_bicylce.txt  26_4_36_H_CPM_6.txt  26_4_42_H.txt  26_4_G.txt  26_4_G_CPM_6.txt  26_4_G_bicylce.txt
decoder/PCMs/273_111/: 273_111_162_H.txt  273_111_256_H.txt  273_111_512_H.txt  273_111_G.txt
decoder/PCMs/288_96/: 288_96_192_H.txt  288_96_G.txt
decoder/PCMs/290_128/: 290_128_170_H.txt  (+4 more)
decoder/alist_tools/: read_alist_file.m  write_alist_file.m  write_alist_gf4.m  write_full_matrix.m
(+196 files in other folders)
